# blitz-playground

./: .gitignore  .gitmodules  .gitmodules.swp  .travis.yml  CMakeLists.txt  Makefile  appveyor.yml  cmake_install.cmake  notes.txt  notesCpp.txt  notesPng.txt  shell.nix
cmake/: FindSDL2_image.cmake  get-sdl2.cmake  get-sdl2_image.cmake  macros.cmake
dependencies/: CMakeLists.txt  Makefile  cmake_install.cmake
dependencies/SDL2_image/: Makefile  config.status  libtool  showimage
dependencies/SDL2_image/.deps/: IMG.Plo  IMG_bmp.Plo  IMG_gif.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_tga.Plo  IMG_tif.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showimage.Po
dependencies/SDL2_image/.libs/: showimage
dependencies/platform/32bit/linux/SDL/lib/release/: libSDL2.la
dependencies/platform/32bit/linux/SDL_image/lib/release/: libSDL2_image-2.0.so.0.0.1
dependencies/platform/32bit/linux/tinyxml2/lib/release/: libtinyxml2.so.5.0.1
dependencies/platform/64bit/linux/SDL/include/: SDL_config.h
dependencies/platform/64bit/linux/SDL/lib/release/: libSDL2-2.0.so.0.5.0  libSDL2.la
dependencies/platform/64bit/linux/SDL_image/lib/release/: libSDL2_image-2.0.so.0
dependencies/platform/64bit/linux/tinyxml2/lib/release/: libtinyxml2.so.5.0.1
dependencies/platform/64bit/win/tinyxml2/lib/release/: tinyxml2d.lib
dependencies/platform/include/SDL/: SDL_keyboard.h
dependencies/platform/include/tinyxml2/: tinyxml2.h
scripts/: cmake-make.bat  cmake-make.sh
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/example/: CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
src/example/game/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/example/game/assets/: map2.tmx  test.xml
src/example/test/: CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
test/: CMakeLists.txt  test.cpp
